--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "console-catch",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Console Catch — Real-time multiplayer card game",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "license": "MIT"
 }
-
-"dependencies": {
-  "express": "^4.18.2",
-  "socket.io": "^4.7.2"
-}
-
