--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "console-catch",
   "version": "1.0.0",
-  "description": "Console Catch — Real-time multiplayer card game",
+  "description": "Console Catch multiplayer card game",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
